# owen-codex

./: .gitignore  Cargo.toml  PLAN.md  package-lock.json  package.json
.agents/plugins/: marketplace.json
.github/ISSUE_TEMPLATE/: config.yml
.github/scripts/: dev-merge-issue-close.cjs
.github/workflows/: ci.yml  publish-npm-manual.yml  release.yml
crates/owx-api/: Cargo.toml
crates/owx-api/src/: lib.rs  main.rs
crates/owx-api/tests/: cli.rs
crates/owx-explore/: Cargo.toml
crates/owx-mux/: Cargo.toml
crates/owx-runtime/: Cargo.toml
crates/owx-runtime-core/: Cargo.toml
crates/owx-sparkshell/: Cargo.toml
plugins/owen-codex/: .mcp.json
prompts/: analyst.md  build-fixer.md  code-reviewer.md  designer.md  executor.md  explore-harness.md  explore.md  git-master.md  planner.md  product-manager.md  prometheus-strict-metis.md  prometheus-strict-momus.md  prometheus-strict-oracle.md  qa-tester.md  researcher.md  sisyphus-lite.md  team-executor.md  test-engineer.md  verifier.md
skills/ai-slop-cleaner/: SKILL.md
skills/ask-claude/: SKILL.md
skills/ask-gemini/: SKILL.md
skills/best-practice-research/: SKILL.md
skills/code-review/: SKILL.md
skills/deep-interview/: SKILL.md
skills/deepsearch/: SKILL.md
skills/ecomode/: SKILL.md
skills/help/: SKILL.md
skills/hud/: SKILL.md
skills/note/: SKILL.md
skills/owx-setup/: SKILL.md
skills/swarm/: SKILL.md
skills/trace/: SKILL.md
skills/ultragoal/: SKILL.md
skills/ultrawork/: SKILL.md
src/: index.ts
surface/: commands.yml  concepts.yml
templates/: AGENTS.md  catalog-manifest.json
(+613 files in other folders)
