[workspace]
members = [
  "crates/owx-api",
  "crates/owx-explore",
  "crates/owx-mux",
  "crates/owx-runtime-core",
  "crates/owx-runtime",
  "crates/owx-sparkshell",
]
resolver = "2"

[workspace.package]

version = "0.0.1"

edition = "2021"
rust-version = "1.73"
license = "MIT"
repository = "https://github.com/kang-heewon/owen-codex"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
